--- a/configs/det_darknet53.yaml
+++ b/configs/det_darknet53.yaml
@@ -2,14 +2,14 @@ model: 'DarkNet53_YOLOv3'
 dataset_name: 'Pascal'
 classes: 20
 in_channels: 3
-train_path: '/mnt/det_train'
-val_path: '/mnt/det_valid'
+train_path: '/mnt/det_test'
+val_path: '/mnt/det_test'
 names: '/dataset/detection/names/pascal_voc.txt'
 input_size: 416
 
 workers: 4
 epochs: 500
-batch_size: 8
+batch_size: 1
 
 save_freq: 1
 save_dir: './saved'
@@ -20,7 +20,7 @@ varient: 53
 
 optimizer: 'sgd'
 optimizer_options:
-  lr: 1e-2
+  lr: 1e-3
   momentum: 0.9
 
 loss: 'yolo_loss'
